# CW_Django

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
apps/blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  articles_list.html
apps/clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  clients_list.html
apps/main/management/commands/: create_su.py
apps/main/static/main/css/: main.css
apps/main/templates/main/: about.html  base.html  contacts.html  home.html
apps/main/templates/main/subtemplates/: header.html
apps/messages_/migrations/: 0002_initial.py
apps/messages_/templates/messages/: message_confirm_delete.html  message_detail.html  message_form.html  messages_list.html
apps/newsletters/templates/newsletters/: newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletters_list.html
apps/users/templates/users/: profile.html  user_form.html
config/: settings.py  urls.py
